[package]
name = "ipgeolocation_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[example]]
name = "readme"
path = "examples/readme.rs" 


[[example]]
name = "ip_addresses"
path = "examples/ip_addresses.rs"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version="1.0.147", features = ["derive"] }


[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
